--- a/addons/rose/addon/styles/rose/components/header/_dropdown.scss
+++ b/addons/rose/addon/styles/rose/components/header/_dropdown.scss
@@ -1,20 +1,14 @@
 @use '../../variables/sizing';
 @use '../../utilities/type';
 
-$chevron: "data:image/svg+xml;utf-8,<svg viewBox='0 0 24 24' fill='%23ebeef2' xmlns='http://www.w3.org/2000/svg'><path fill-rule='evenodd' clip-rule='evenodd' d='M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z'></path></svg>";
-
 .rose-header {
   .rose-dropdown {
     &,
     &[open] {
       .rose-dropdown-trigger {
         color: var(--white);
-        background: url($chevron) no-repeat right sizing.rems(s) center;
         background-size: sizing.rems(m);
-
-        $yPadding: sizing.rems(xxxs);
-        $rightPadding: sizing.rems(xs) + sizing.rems(l);
-        padding: $yPadding $rightPadding $yPadding sizing.rems(s);
+        padding: sizing.rems(xxxs) sizing.rems(s);
 
         &.has-icon-only {
           padding-left: sizing.rems(xs);
@@ -36,6 +30,14 @@ $chevron: "data:image/svg+xml;utf-8,<svg viewBox='0 0 24 24' fill='%23ebeef2' xm
         &:hover,
         &:focus {
           background-color: transparent;
+        }
+
+        .rose-dropdown-trigger-icon {
+          padding-right: sizing.rems(xxxs);
+        }
+
+        .rose-dropdown-trigger-caret {
+          padding-left: sizing.rems(xxxs);
         }
       }
     }
